# claudio

./: .gitignore  pyproject.toml
src/claude_audio_connector/: audio_utils.py  capture.py  config.py  daemon.py  ipc.py  listen.py  runtime.py  speak.py  start_cmd.py  stop_cmd.py  stt.py  wait_cmd.py
tests/: test_ipc.py  test_vad.py
